# autopen

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
backend/: __init__.py
backend/alembic/: env.py
backend/alembic/versions/: 20260102_0000_initial_migration.py
backend/api/: deps.py  main.py
backend/api/routes/: __init__.py  blacklist.py  health.py  reports.py  scans.py  targets.py
backend/api/schemas/: __init__.py  blacklist.py  health.py  report.py  scan.py  target.py
backend/core/: __init__.py  blacklist_manager.py  config.py  deduplicator.py  error_handler.py  logging.py  orchestrator.py  parallel_executor.py  recovery.py  scanner_manager.py  security.py  state_manager.py  target_classifier.py
backend/db/: base.py  session.py
backend/integrations/: __init__.py  ftp_client.py
backend/models/: __init__.py  base.py  blacklist.py  checkpoint.py  finding.py  scan.py  target.py
backend/parsers/: __init__.py  base_parser.py
backend/reports/: __init__.py  pdf_generator.py  report_coordinator.py
backend/reports/templates/: report_base.html  technical_report.html
backend/scanners/: __init__.py  base.py
backend/schemas/: __init__.py  blacklist.py  checkpoint.py  finding.py  scan.py  target.py
backend/tasks/: __init__.py  celery_app.py  scan_tasks.py
backend/workers/: celery_app.py  tasks.py
cli/: __init__.py  config.py  interactive.py  main.py  utils.py
docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
docs/: CORE_COMPONENTS.md  DATABASE.md
docs/cli/: README.md
frontend/: package.json
man/: pentest-cli.1
scripts/: init_db.py  pentest-cli-completion.bash
tests/reports/: test_pdf_generator.py
(+5 files in other folders)
