[tool.poetry]
name = "pentest-automation"
version = "1.0.0"
description = "Automated Penetration Testing Platform"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.104.0"
uvicorn = {extras = ["standard"], version = ">=0.24.0"}
sqlalchemy = ">=2.0.0"
alembic = ">=1.12.0"
psycopg2-binary = ">=2.9.0"
asyncpg = ">=0.29.0"
redis = ">=5.0.0"
celery = ">=5.3.0"
python-multipart = ">=0.0.6"
pydantic = ">=2.4.0"
pydantic-settings = ">=2.0.0"
python-jose = {extras = ["cryptography"], version = ">=3.3.0"}
passlib = {extras = ["bcrypt"], version = ">=1.7.4"}
python-telegram-bot = ">=20.6"
reportlab = ">=4.0.0"
weasyprint = ">=60.0"
matplotlib = ">=3.8.0"
Pillow = ">=10.0.0"
paramiko = ">=3.3.0"
Jinja2 = ">=3.1.2"
click = ">=8.1.0"
loguru = ">=0.7.0"
httpx = ">=0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-asyncio = ">=0.21.0"
black = ">=23.10.0"
flake8 = ">=6.1.0"
mypy = ">=1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
pythonpath = [
  "."
]
asyncio_mode = "auto"
